// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Should render a Card 1`] = `
<div
  className="Cardstyled__StyledCardWrapper-sc-1gxmhl7-6 jhkssp"
>
  <div
    className="Cardstyled__StyledCard-sc-1gxmhl7-1 dGwotJ"
    display="block"
    elevation={0}
  >
    Card 
  </div>
</div>
`;

exports[`Card Should render a Card with badges 1`] = `
<div
  className="Cardstyled__StyledCardWrapper-sc-1gxmhl7-6 jhkssp"
>
  <div
    className="Cardstyled__StyledBadgeLineWrapper-sc-1gxmhl7-0 cFLGQx"
  >
    <div
      className="Badgestyled__StyledBadgeLineWrapper-sc-1xo0r7x-1 ejODHn"
    >
      <div
        className="Badgestyled__StyledBadgeWrapper-sc-1xo0r7x-2 TMGmv"
      >
        <span
          className="Typostyled__StyledInfoTypo-sc-1o9a6sy-0 hycfbo Badgestyled__StyledTypo-sc-1xo0r7x-0 ePrcMg"
          fontSize="xxs"
        >
          <div
            className="Badgestyled__StyledOverflow-sc-1xo0r7x-3 iyMzXH"
          >
            New
          </div>
        </span>
      </div>
      <div
        className="Badgestyled__StyledBadgeWrapper-sc-1xo0r7x-2 TMGmv"
      >
        <span
          className="Typostyled__StyledInfoTypo-sc-1o9a6sy-0 hycfbo Badgestyled__StyledTypo-sc-1xo0r7x-0 ePrcMg"
          fontSize="xxs"
        >
          <div
            className="Badgestyled__StyledOverflow-sc-1xo0r7x-3 iyMzXH"
          >
            100% Free
          </div>
        </span>
      </div>
    </div>
  </div>
  <div
    className="Cardstyled__StyledCard-sc-1gxmhl7-1 dGwotJ"
    display="block"
    elevation={0}
  >
    Card 
  </div>
</div>
`;

exports[`Card Should render a Card with badges and hover effect 1`] = `
<div
  className="Cardstyled__StyledCardWrapper-sc-1gxmhl7-6 kFYWgF"
>
  <div
    className="Cardstyled__StyledBadgeLineWrapper-sc-1gxmhl7-0 cFLGQx"
  >
    <div
      className="Badgestyled__StyledBadgeLineWrapper-sc-1xo0r7x-1 ejODHn"
    >
      <div
        className="Badgestyled__StyledBadgeWrapper-sc-1xo0r7x-2 TMGmv"
      >
        <span
          className="Typostyled__StyledInfoTypo-sc-1o9a6sy-0 hycfbo Badgestyled__StyledTypo-sc-1xo0r7x-0 ePrcMg"
          fontSize="xxs"
        >
          <div
            className="Badgestyled__StyledOverflow-sc-1xo0r7x-3 iyMzXH"
          >
            New
          </div>
        </span>
      </div>
      <div
        className="Badgestyled__StyledBadgeWrapper-sc-1xo0r7x-2 TMGmv"
      >
        <span
          className="Typostyled__StyledInfoTypo-sc-1o9a6sy-0 hycfbo Badgestyled__StyledTypo-sc-1xo0r7x-0 ePrcMg"
          fontSize="xxs"
        >
          <div
            className="Badgestyled__StyledOverflow-sc-1xo0r7x-3 iyMzXH"
          >
            100% Free
          </div>
        </span>
      </div>
    </div>
  </div>
  <div
    className="Cardstyled__StyledCard-sc-1gxmhl7-1 sFHjI"
    display="flex"
    elevation={0}
    shape="rounded-small"
  >
    Card 
  </div>
</div>
`;

exports[`Card Should render a Card with custom padding 1`] = `
<div
  className="Cardstyled__StyledCardWrapper-sc-1gxmhl7-6 jhkssp"
>
  <div
    className="Cardstyled__StyledCard-sc-1gxmhl7-1 fLJaaG"
    display="block"
    elevation={0}
  >
    Card 
  </div>
</div>
`;

exports[`Card Should render a Card with custom shape 1`] = `
<div
  className="Cardstyled__StyledCardWrapper-sc-1gxmhl7-6 jhkssp"
>
  <div
    className="Cardstyled__StyledCard-sc-1gxmhl7-1 caHBET"
    display="block"
    elevation={0}
    shape={
      Object {
        "bottomLeft": "sharp",
        "bottomRight": "sharp",
        "topLeft": "rounded-small",
        "topRight": "rounded-small",
      }
    }
  >
    Card 
  </div>
</div>
`;

exports[`Card Should render a Card with elevation 1`] = `
<div
  className="Cardstyled__StyledCardWrapper-sc-1gxmhl7-6 jhkssp"
>
  <div
    className="Cardstyled__StyledCard-sc-1gxmhl7-1 ksdopm"
    display="block"
    elevation={1}
  >
    Card 
  </div>
</div>
`;

exports[`Card Should render a Card with hover 1`] = `
<div
  className="Cardstyled__StyledCardWrapper-sc-1gxmhl7-6 kFYWgF"
>
  <div
    className="Cardstyled__StyledCard-sc-1gxmhl7-1 iQbnEL"
    display="block"
    elevation={0}
  >
    Card 
  </div>
</div>
`;

exports[`Card Should render a Card with no border on right 1`] = `
<div
  className="Cardstyled__StyledCardWrapper-sc-1gxmhl7-6 jhkssp"
>
  <div
    className="Cardstyled__StyledCard-sc-1gxmhl7-1 fHRguC"
    display="block"
    elevation={0}
  >
    Card 
  </div>
</div>
`;

exports[`Card Should render a Card with padding 1`] = `
<div
  className="Cardstyled__StyledCardWrapper-sc-1gxmhl7-6 jhkssp"
>
  <div
    className="Cardstyled__StyledCard-sc-1gxmhl7-1 dUiCSJ"
    display="block"
    elevation={0}
  >
    Card 
  </div>
</div>
`;

exports[`Card Should render a Card with padding, noBorder, shape, surface 1`] = `
<div
  className="Cardstyled__StyledCardWrapper-sc-1gxmhl7-6 jhkssp"
>
  <div
    className="Cardstyled__StyledCard-sc-1gxmhl7-1 gifmKA"
    display="block"
    elevation={0}
    shape={
      Object {
        "bottomLeft": "sharp",
        "bottomRight": "sharp",
        "topLeft": "rounded-small",
        "topRight": "rounded-small",
      }
    }
  >
    Card 
  </div>
</div>
`;

exports[`Card Should render a Card with shape 1`] = `
<div
  className="Cardstyled__StyledCardWrapper-sc-1gxmhl7-6 jhkssp"
>
  <div
    className="Cardstyled__StyledCard-sc-1gxmhl7-1 iKFUGx"
    display="block"
    elevation={0}
    shape="sharp"
  >
    Card 
  </div>
</div>
`;

exports[`Card Should render a Card with surface 1`] = `
<div
  className="Cardstyled__StyledCardWrapper-sc-1gxmhl7-6 jhkssp"
>
  <div
    className="Cardstyled__StyledCard-sc-1gxmhl7-1 dGwotJ"
    display="block"
    elevation={0}
  >
    Card 
  </div>
</div>
`;
